log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: shared-logs
        emptyDir: {}
      containers:
      - name: log-output-generator
        image: gedionkip/log-output-generator:1.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: shared-logs
          mountPath: /shared
      - name: log-output-reader
        image: gedionkip/log-output-reader:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: shared-logs
          mountPath: /shared
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
